--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "4.17.1",
     "faker": "^4.1.0",
     "moment": "^2.25.3",
+    "mongodb": "^3.5.7",
     "mongoose": "5.9.7",
     "morgan": "1.10.0",
     "nodemon": "2.0.2",
