--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "nodemon",
     "build": "webpack --w --mode development",
     "watch": "webpack-dev-server --open",
-    "seed": "node ./database/seed.js"
+    "seed": "node --max-old-space-size=16000 database/seed.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,8 @@
     "axios": "0.19.2",
     "body-parser": "1.19.0",
     "cors": "2.8.5",
+    "csv-write-stream": "^2.0.0",
+    "csvtojson": "^2.0.10",
     "express": "4.17.1",
     "faker": "^4.1.0",
     "moment": "^2.25.3",
