--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "nodemon",
     "build": "webpack --w --mode development",
     "watch": "webpack-dev-server --open",
-    "seed": "node --max-old-space-size=16000 database/seed.js"
+    "seed": "node --max-old-space-size=16000 database/seed.js",
+    "count": "node database/counter.js"
   },
   "repository": {
     "type": "git",
