--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "seed": "node database/seed.js && mongoimport --type csv -d sdc -c reviews --headerline --drop sdc.csv",
     "count": "node database/counter.js",
     "drop": "node database/drop.js && npm run count",
-    "psql": "psql -d postgres -U root",
-    "schema": "psql -d postgres -U root -f schema.sql"
+    "psql": "psql -d sdc -U root",
+    "schema": "psql -d sdc -U root -f schema.sql"
   },
   "repository": {
     "type": "git",
@@ -35,6 +35,7 @@
     "mongodb": "^3.5.7",
     "morgan": "1.10.0",
     "nodemon": "2.0.2",
+    "pg": "^8.2.1",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
