--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "start": "nodemon",
     "build": "webpack --w --mode development",
     "watch": "webpack-dev-server --open",
-    "seed": "node database/seed.js && mongoimport --type csv -d sdc -c reviews --headerline --drop sdc.csv",
+    "csv": "node database/seed.js ",
     "count": "node database/counter.js",
     "drop": "node database/drop.js && npm run count",
     "psql": "psql -d sdc -U root",
-    "schema": "psql -d sdc -U root -f schema.sql"
+    "schema": "psql -d sdc -U root -f schema.sql",
+    "mongo-seed":"mongoimport --type csv -d sdc -c reviews --headerline --drop sdc.csv"
   },
   "repository": {
     "type": "git",
