--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "start": "nodemon",
     "build": "webpack --w --mode development",
     "watch": "webpack-dev-server --open",
-    "csv": "node database/seed.js ",
+    "csv": "node database/csv.js ",
     "count": "node database/mongo/counter.js",
     "drop": "node database/mongo/drop.js && npm run count",
     "psql": "psql -d sdc -U root",
     "schema": "psql -d sdc -U root -f schema.sql",
     "mongo-seed":"mongoimport --type csv -d sdc -c reviews --headerline --drop sdc.csv"
+
   },
   "repository": {
     "type": "git",
