Quick script that indexes mongo database

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "drop": "node database/mongo/drop.js && npm run count",
     "psql": "psql -d sdc -U root",
     "schema": "psql -d sdc -U root -f schema.sql",
-    "mongo-seed":"mongoimport --type csv -d sdc -c reviews --headerline --drop sdc.csv"
+    "mongo-seed":"mongoimport --type csv -d sdc -c reviews --headerline --drop sdc.csv",
+    "mongo-index":"node database/mongo/indexer.js"
 
   },
   "repository": {
