--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "psql": "psql -d sdc -U root",
     "schema": "psql -d sdc -U root -f schema.sql",
     "mongo-seed":"mongoimport --type csv -d sdc -c reviews --headerline --drop sdc.csv",
-    "mongo-index":"node database/mongo/indexer.js"
+    "mongo-index":"node database/mongo/indexer.js",
+    "psql-seed":"psql -d sdc -U AlexB -c '\\COPY reviews(rev_id,rating,title,review,recommendation,nickname,email,age,bodyType,locat,wearTo,likes,dislikes) FROM 'sdc.csv' csv header ;'"
 
   },
   "repository": {
