--- a/stress-test/get.yml
+++ b/stress-test/get.yml
@@ -1,9 +1,9 @@
 config:
   target: "http://localhost:9000"
   phases:
-    - duration: 60
-      arrivalRate: 1
+    - duration: 1
+      arrivalRate: 10
 scenarios:
   - flow:
     - get:
-        url: "/"
+        url: "/reviews/801231"
