--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "aws": "aws s3 sync client/dist s3://sdc-alex --acl public-read",
     "s3": "npm run build-prod && npm run aws",
     "docker-build": "docker build . -t sdc-reviews",
-    "docker-run": "docker run -p 9000:9000 sdc-reviews"
+    "docker-run": "docker run -p 9000:9000 sdc-reviews",
+    "docker-push": "npm run docker-build && docker tag sdc-reviews alexbenko/sdc-reviews && docker push alexbenko/sdc-reviews"
   },
   "repository": {
     "type": "git",
