--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "s3": "npm run build-prod && npm run aws",
     "docker-build": "docker build . -t sdc",
     "docker-run": "docker run -p 80:80 sdc",
-    "docker-push": "npm run docker-build && docker tag sdc alexbenko/sdc && docker push alexbenko/sdc"
+    "docker-push": "docker tag sdc alexbenko/sdc && docker push alexbenko/sdc"
   },
   "repository": {
     "type": "git",
