--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "docker-push": "docker tag sdc alexbenko/sdc && docker push alexbenko/sdc"
   },
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/JJACD/reviews_component.git"
+    "type": "git"
   },
   "author": "Alex Benko, Danny San",
   "license": "MIT",
@@ -44,6 +43,7 @@
     "morgan": "1.10.0",
     "newrelic": "^6.8.0",
     "nodemon": "2.0.2",
+    "path": "^0.12.7",
     "pg": "^8.2.1",
     "react": "16.13.1",
     "react-dom": "16.13.1"
@@ -52,10 +52,11 @@
     "@babel/core": "7.9.0",
     "@babel/plugin-transform-runtime": "^7.9.6",
     "@babel/preset-env": "7.9.0",
+    "@babel/preset-es2015": "^7.0.0-beta.53",
     "@babel/preset-react": "7.9.4",
-    "@shelf/jest-mongodb": "^1.1.5",
     "babel-jest": "^26.0.1",
     "babel-loader": "8.1.0",
+    "babel-register": "^6.26.0",
     "css-loader": "^3.4.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
@@ -65,7 +66,6 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
-    "html-webpack-plugin": "^4.0.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.0.1",
     "react-test-renderer": "^16.13.1",
@@ -80,9 +80,5 @@
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|less)$": "identity-obj-proxy"
     }
-  },
-  "bugs": {
-    "url": "https://github.com/JJACD/reviews_component/issues"
-  },
-  "homepage": "https://github.com/JJACD/reviews_component#readme"
+  }
 }
